@@ -1,3 +1,10 @@
+2002-11-03  John Harper  <jsh@unfactored.org>
+
+	* widgets/match-window.jl, widgets/keymap.jl: 
+
+	* shell.jl, widgets/match-window.jl, widgets/keymap.jl: some
+	small UI tweaks
+
 2002-11-02  John Harper  <jsh@unfactored.org>
 
 	* widgets/keymap.jl (make-keymap:binding-item): fix packing of
